# extensions-rabbitmq

./: pyproject.toml
extensions/rabbitmq/: __init__.py  consumer.py  producer.py
tests/: test_producer_and_consumer.py
