[tool.poetry]
name = "extensions-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"
packages = [
    {include  = "extensions/configuration"}
]

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
